Added a few API funcs, and updated Windows build.
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/testwallet/CPP_API_Windows/CPP_API_Windows.vcxproj
+++ b/testwallet/CPP_API_Windows/CPP_API_Windows.vcxproj
@@ -11,14 +11,19 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\XmlRpcC4Win\timxmlrpc.h" />
     <ClInclude Include="..\main.h" />
     <ClInclude Include="..\OpenTransactions.h" />
+    <ClInclude Include="..\OTAPI.h" />
+    <ClInclude Include="..\OTAPI_funcdef.h" />
     <ClInclude Include="..\OTClient.h" />
     <ClInclude Include="..\OTServerConnection.h" />
     <ClInclude Include="..\SSL-Example\SFSocket.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\XmlRpcC4Win\TimXmlRpc.cpp" />
     <ClCompile Include="..\OpenTransactions.cpp" />
+    <ClCompile Include="..\OTAPI.cpp" />
     <ClCompile Include="..\OTClient.cpp" />
     <ClCompile Include="..\OTServerConnection.cpp" />
     <ClCompile Include="..\SSL-Example\SFSocket.c" />
@@ -51,7 +56,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\~\OpenSSL-Win32\include;C:\~\Open-Transactions\OTLib;$(IncludePath)</IncludePath>
+    <IncludePath>C:\~\OpenSSL-Win32\include;C:\~\Open-Transactions\XmlRpcC4Win;C:\~\Open-Transactions\OTLib;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LibraryPath>C:\~\OpenSSL-Win32\lib\VC;C:\~\Open-Transactions\OTLib\OTLib\Debug;$(LibraryPath)</LibraryPath>
@@ -62,7 +67,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;OT_XMLRPC_MODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
