--- a/OTLib/OTLib/OTLib.vcxproj
+++ b/OTLib/OTLib/OTLib.vcxproj
@@ -77,12 +77,15 @@
     <ClInclude Include="..\irrxml\irrXML.h" />
     <ClInclude Include="..\Lucre\bank.h" />
     <ClInclude Include="..\OTAccount.h" />
+    <ClInclude Include="..\OTAgreement.h" />
     <ClInclude Include="..\OTASCIIArmor.h" />
     <ClInclude Include="..\OTAssetContract.h" />
     <ClInclude Include="..\OTAsymmetricKey.h" />
     <ClInclude Include="..\OTBasket.h" />
     <ClInclude Include="..\OTCheque.h" />
     <ClInclude Include="..\OTContract.h" />
+    <ClInclude Include="..\OTCron.h" />
+    <ClInclude Include="..\OTCronItem.h" />
     <ClInclude Include="..\OTData.h" />
     <ClInclude Include="..\OTDataCheck.h" />
     <ClInclude Include="..\OTEnvelope.h" />
@@ -91,10 +94,14 @@
     <ClInclude Include="..\OTInstrument.h" />
     <ClInclude Include="..\OTItem.h" />
     <ClInclude Include="..\OTLedger.h" />
+    <ClInclude Include="..\OTLog.h" />
+    <ClInclude Include="..\OTMarket.h" />
     <ClInclude Include="..\OTMessage.h" />
     <ClInclude Include="..\OTMessageBuffer.h" />
     <ClInclude Include="..\OTMint.h" />
+    <ClInclude Include="..\OTOffer.h" />
     <ClInclude Include="..\OTPayload.h" />
+    <ClInclude Include="..\OTPaymentPlan.h" />
     <ClInclude Include="..\OTPseudonym.h" />
     <ClInclude Include="..\OTPurse.h" />
     <ClInclude Include="..\OTServerContract.h" />
@@ -103,6 +110,8 @@
     <ClInclude Include="..\OTString.h" />
     <ClInclude Include="..\OTStringXML.h" />
     <ClInclude Include="..\OTToken.h" />
+    <ClInclude Include="..\OTTrackable.h" />
+    <ClInclude Include="..\OTTrade.h" />
     <ClInclude Include="..\OTTransaction.h" />
     <ClInclude Include="..\OTTransactionType.h" />
     <ClInclude Include="..\OTWallet.h" />
@@ -113,13 +122,17 @@
     <ClCompile Include="..\easyzlib.c" />
     <ClCompile Include="..\irrxml\irrXML.cpp" />
     <ClCompile Include="..\Lucre\bankimp.cpp" />
+    <ClCompile Include="..\mkcert.c" />
     <ClCompile Include="..\OTAccount.cpp" />
+    <ClCompile Include="..\OTAgreement.cpp" />
     <ClCompile Include="..\OTASCIIArmor.cpp" />
     <ClCompile Include="..\OTAssetContract.cpp" />
     <ClCompile Include="..\OTAsymmetricKey.cpp" />
     <ClCompile Include="..\OTBasket.cpp" />
     <ClCompile Include="..\OTCheque.cpp" />
     <ClCompile Include="..\OTContract.cpp" />
+    <ClCompile Include="..\OTCron.cpp" />
+    <ClCompile Include="..\OTCronItem.cpp" />
     <ClCompile Include="..\OTData.cpp" />
     <ClCompile Include="..\OTDataCheck.cpp" />
     <ClCompile Include="..\OTEnvelope.cpp" />
@@ -127,10 +140,14 @@
     <ClCompile Include="..\OTInstrument.cpp" />
     <ClCompile Include="..\OTItem.cpp" />
     <ClCompile Include="..\OTLedger.cpp" />
+    <ClCompile Include="..\OTLog.cpp" />
+    <ClCompile Include="..\OTMarket.cpp" />
     <ClCompile Include="..\OTMessage.cpp" />
     <ClCompile Include="..\OTMessageBuffer.cpp" />
     <ClCompile Include="..\OTMint.cpp" />
+    <ClCompile Include="..\OTOffer.cpp" />
     <ClCompile Include="..\OTPayload.cpp" />
+    <ClCompile Include="..\OTPaymentPlan.cpp" />
     <ClCompile Include="..\OTPseudonym.cpp" />
     <ClCompile Include="..\OTPurse.cpp" />
     <ClCompile Include="..\OTServerContract.cpp" />
@@ -139,6 +156,8 @@
     <ClCompile Include="..\OTString.cpp" />
     <ClCompile Include="..\OTStringXML.cpp" />
     <ClCompile Include="..\OTToken.cpp" />
+    <ClCompile Include="..\OTTrackable.cpp" />
+    <ClCompile Include="..\OTTrade.cpp" />
     <ClCompile Include="..\OTTransaction.cpp" />
     <ClCompile Include="..\OTTransactionType.cpp" />
     <ClCompile Include="..\OTWallet.cpp" />
