--- a/util/signcontract/Makefile
+++ b/util/signcontract/Makefile
@@ -81,8 +81,8 @@ API_LDFLAGS = # empty
 
 # The LIBS macro contains a list of libraries that the the
 # executable must be linked against.
-#API_LIBS =  -lssl -lcrypto  -lOTLib -lssl -lcrypto  -lOTLib  -lssl -lcrypto -lOTLib  -lssl -lcrypto -lOTLib
-#API_DEBUG_LIBS = -lssl -lcrypto -lOTLibd -lssl -lcrypto -lOTLibd  -lssl -lcrypto -lOTLibd -lssl -lcrypto -lOTLibd
+#API_LIBS =  -lssl -lcrypto  -lOTLib -lssl -lcrypto  -lOTLib  -lssl -lcrypto -lOTLib  -lssl -lcrypto -lprotobuf -lmsgpack -lOTLib
+#API_DEBUG_LIBS = -lssl -lcrypto -lOTLibd -lssl -lcrypto -lOTLibd  -lssl -lcrypto -lOTLibd -lssl -lcrypto -lprotobuf -lmsgpack -lOTLibd
 
 
 
@@ -140,8 +140,8 @@ endif
 # --- DARWIN
 #
 ifeq ($(PLATFORM), darwin)
-API_LIBS = -lssl  -lcrypto -lOTLib 
-API_DEBUG_LIBS =  -lssl -lcrypto -lOTLibd 
+API_LIBS = -lssl  -lcrypto -lprotobuf -lmsgpack -lOTLib 
+API_DEBUG_LIBS =  -lssl -lcrypto -lprotobuf -lmsgpack -lOTLibd 
 endif
 # End DARWIN -------------------------------------------------------------
 
@@ -151,8 +151,8 @@ ifeq ($(PLATFORM), linux)
 
 API_LDFLAGS += -ldl
 
-API_LIBS = -lOTLib -lssl  -lcrypto 
-API_DEBUG_LIBS =  -lOTLibd -lssl -lcrypto  
+API_LIBS = -lOTLib -lssl -lcrypto -lprotobuf -lmsgpack 
+API_DEBUG_LIBS =  -lOTLibd -lssl -lcrypto -lprotobuf -lmsgpack 
 
 endif
 # End LINUX -------------------------------------------------------------
@@ -163,8 +163,8 @@ endif
 # --- FreeBSD ----
 
 ifeq ($(PLATFORM), freebsd)
-API_LIBS = -lssl  -lcrypto -lOTLib 
-API_DEBUG_LIBS =  -lssl -lcrypto -lOTLibd 
+API_LIBS = -lssl  -lcrypto -lprotobuf -lmsgpack -lOTLib 
+API_DEBUG_LIBS =  -lssl -lcrypto -lprotobuf -lmsgpack -lOTLibd 
 endif
 # End FreeBSD -------------------------------------------------------------
 
@@ -177,7 +177,7 @@ LIBDIRS = $(PLATFORM_LIBDIRS) $(OT_LIBDIRS)
 
 
 CXXSOURCES = \
-			 main.cpp
+			main.cpp
 			 
 CXXOBJECTS = $(CXXSOURCES:.cpp=.o)  # expands to list of object files
 CXXFLAGS   = $(INCLUDEDIRS) $(API_CFLAGS) $(FT_FLAGS) -c
@@ -253,7 +253,6 @@ debug: $(CXXOBJECTS) $(COBJECTS)
 
 main.o: main.cpp
 	$(CXX) $(CXXFLAGS) -c -o main.o main.cpp
-
 
 #
 #
