--- a/testwallet/Makefile.API
+++ b/testwallet/Makefile.API
@@ -2,8 +2,8 @@
 # IMPORTANT:  WHEN USING THIS MAKEFILE, YOU *MUST* USE THE OPTIONS. EXAMPLE:
 #
 # So you have to do: 
-#      make -f Makefile.API PLATFORM=linux LANGUAGE=php5 TRANSPORT=XmlRpc
-#  OR: make -f Makefile.API PLATFORM=darwin LANGUAGE=c  TRANSPORT=XmlRpc debug
+#      make -f Makefile.API PLATFORM=linux LANGUAGE=php5 TRANSPORT=ZMQ
+#  OR: make -f Makefile.API PLATFORM=darwin LANGUAGE=c  TRANSPORT=ZMQ debug
 #  OR: make -f Makefile.API PLATFORM=freebsd LANGUAGE=ruby
 #  Etc...
 #
@@ -95,8 +95,8 @@ C_COMPILER = cc
 
 # The LIBS macro contains a list of libraries that the the
 # executable must be linked against.
-API_LIBS =  -lssl -lcrypto  -lOTLib -lssl -lcrypto  -lOTLib  -lssl -lcrypto -lOTLib  -lssl -lcrypto -lprotobuf -lmsgpack -lOTLib
-API_DEBUG_LIBS = -lssl -lcrypto -lOTLibd -lssl -lcrypto -lOTLibd  -lssl -lcrypto -lOTLibd -lssl -lcrypto -lprotobuf -lmsgpack -lOTLibd
+API_LIBS =  -lssl -lcrypto  -lOTLib -lssl -lcrypto  -lOTLib  -lssl -lcrypto -lOTLib  -lssl -lcrypto -lprotobuf -lmsgpack -lzmq -lOTLib
+API_DEBUG_LIBS = -lssl -lcrypto -lOTLibd -lssl -lcrypto -lOTLibd  -lssl -lcrypto -lOTLibd -lssl -lcrypto -lprotobuf -lmsgpack -lzmq -lOTLibd
 #
 # FT: I tested this recently. The above version worked on Linux, and the below version did not.
 #
@@ -541,21 +541,21 @@ endif
 
 # This is not a target, but a command-line option.
 #
-# So you have to do: make -f Makefile.API PLATFORM=linux LANGUAGE=php5 TRANSPORT=XmlRpc
-#                OR: make -f Makefile.API PLATFORM=darwin LANGUAGE=c  TRANSPORT=XmlRpc debug
-#                OR: make -f Makefile.API PLATFORM=freebsd LANGUAGE=ruby TRANSPORT=XmlRpc
+# So you have to do: make -f Makefile.API PLATFORM=linux LANGUAGE=php5 TRANSPORT=ZMQ
+#                OR: make -f Makefile.API PLATFORM=darwin LANGUAGE=c  TRANSPORT=ZMQ debug
+#                OR: make -f Makefile.API PLATFORM=freebsd LANGUAGE=ruby TRANSPORT=ZMQ
 # 		Etc...
 #
 
-XMLRPCPP_INCLUDEDIR = -I../xmlrpcpp/src
-XMLRPCPP_LIBDIR = -L../xmlrpcpp/
+#XMLRPCPP_INCLUDEDIR = -I../xmlrpcpp/src
+#XMLRPCPP_LIBDIR = -L../xmlrpcpp/
 
-ifeq ($(TRANSPORT), XmlRpc)
-API_CFLAGS += -DOT_XMLRPC_MODE
-PLATFORM_INCLUDEDIRS += $(XMLRPCPP_INCLUDEDIR)
+ifeq ($(TRANSPORT), ZMQ)
+API_CFLAGS += -DOT_ZMQ_MODE
+#PLATFORM_INCLUDEDIRS += $(XMLRPCPP_INCLUDEDIR)
 
-API_LDFLAGS += -lXmlRpc
-PLATFORM_LIBDIRS += $(XMLRPCPP_LIBDIR)
+#API_LDFLAGS += -lXmlRpc
+#PLATFORM_LIBDIRS += $(XMLRPCPP_LIBDIR)
 endif
 
 
